fix article about-us / titles-box on tablet resolution / remove min-width

--- a/src/styles/blocks/articles/about-us-article.scss
+++ b/src/styles/blocks/articles/about-us-article.scss
@@ -1,4 +1,9 @@
 .about-us {
+  @include onTablet {
+    display: flex;
+    gap: 24px;
+  }
+
   &__pre-title {
     color: $secondary-page-color;
     font-size: 12px;
@@ -11,11 +16,8 @@
     @include article-primary-title;
   }
 
-  @include onTablet {
-    display: flex;
-    gap: 24px;
-
-    &__titles-box {
+  &__titles-box {
+    @include onLaptop {
       min-width: 410px;
     }
   }
